# EliteBridgeuifile

./: README.md
build-elitebridge_ui_file-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-elitebridge_ui_file-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-elitebridge_ui_file-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/elitebridge_ui_file_autogen/: deps  mocs_compilation.cpp
build-elitebridge_ui_file-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/elitebridge_ui_file_autogen/EWIEGA46WW/: moc_admin.cpp  moc_admin.cpp.d  moc_edi.cpp  moc_edi.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_process.cpp  moc_process.cpp.d  moc_registrationtab.cpp  moc_registrationtab.cpp.d  moc_reporting.cpp  moc_reporting.cpp.d  moc_sysconfig.cpp  moc_sysconfig.cpp.d  moc_userwindow.cpp  moc_userwindow.cpp.d
build-elitebridge_ui_file-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/elitebridge_ui_file_autogen/include/: ui_admin.h  ui_edi.h  ui_mainwindow.h  ui_process.h  ui_registrationtab.h  ui_reporting.h  ui_sysconfig.h  ui_userwindow.h
build-elitebridge_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-elitebridge_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/elitebridge_ui_file_autogen/: deps
build-elitebridge_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/elitebridge_ui_file_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-insideui-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-insideui-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/insideui_autogen/: deps  mocs_compilation.cpp
build-insideui-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/insideui_autogen/EWIEGA46WW/: moc_userwindow.cpp  (+1 more)
elitebridge_ui_file/: CMakeLists.txt  CMakeLists.txt.user.8a136e1  admin.cpp  admin.h  admin.ui  edi.cpp  edi.h  edi.ui  elitebridge_ui_file_en_IN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp  process.h  process.ui  registrationtab.cpp  registrationtab.h  registrationtab.ui  reporting.cpp  reporting.h  reporting.ui  sysconfig.cpp  sysconfig.h  sysconfig.ui  userwindow.cpp  userwindow.h  userwindow.ui
insideui/: CMakeLists.txt  main.cpp  userwindow.cpp  userwindow.h  userwindow.ui
(+271 files in other folders)
